--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "karma": "^6.4.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-phantomjs2-launcher": "^0.5.0",
-    "karma-chrome-launcher": "^3.1.1"
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^5.1.0"
   }
 }
